--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Tesla Clone</title>
     <!-- Link a estilos.css -->
     <link rel="stylesheet" href="styles.css">
+    <!-- Link de goolgle fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -15,7 +19,7 @@
             <svg class="tds-icon tds-icon-logo-wordmark tds-site-logo-icon" viewBox="0 0 342 35" xmlns="http://www.w3.org/2000/svg"><path d="M0 .1a9.7 9.7 0 0 0 7 7h11l.5.1v27.6h6.8V7.3L26 7h11a9.8 9.8 0 0 0 7-7H0zm238.6 0h-6.8v34.8H263a9.7 9.7 0 0 0 6-6.8h-30.3V0zm-52.3 6.8c3.6-1 6.6-3.8 7.4-6.9l-38.1.1v20.6h31.1v7.2h-24.4a13.6 13.6 0 0 0-8.7 7h39.9v-21h-31.2v-7h24zm116.2 28h6.7v-14h24.6v14h6.7v-21h-38zM85.3 7h26a9.6 9.6 0 0 0 7.1-7H78.3a9.6 9.6 0 0 0 7 7zm0 13.8h26a9.6 9.6 0 0 0 7.1-7H78.3a9.6 9.6 0 0 0 7 7zm0 14.1h26a9.6 9.6 0 0 0 7.1-7H78.3a9.6 9.6 0 0 0 7 7zM308.5 7h26a9.6 9.6 0 0 0 7-7h-40a9.6 9.6 0 0 0 7 7z" fill="currentColor"></path></svg>
         </a>
         <!-- Menu de navegacion -->
-        <nav class=" center desktop">
+        <nav class="center desktop">
             <a href="">Model S</a>
             <a href="">Model 3</a>
             <a href="">Model X</a>
@@ -24,9 +28,9 @@
             <a href="">Solar panels</a>
         </nav>
         <!-- Menu oculto-->
-        <nav class="rigth desktop">
+        <nav class="right">
             <a href="" class="desktop">Shop</a>
-            <a href="" class="DESKTOP">Account</a>
+            <a href="" class="desktop">Account</a>
             <a href="">Menu</a>
         </nav>
     </header>
