Secciones HTML CSS

--- a/index.html
+++ b/index.html
@@ -34,5 +34,76 @@
             <a href="">Menu</a>
         </nav>
     </header>
+    <!-- Secciones -->
+    <section style="background-image: url('images/model-3.jpg');">
+        <div class="content">
+            <h1>Model 3</h1>
+            <p>Reserva en línea <a href="">Reserva Ya</a></p>
+            <div class="buttons">
+                <a href="">Personalizar orden</a>
+                <a href="">Inventarios</a>
+            </div>
+        </div>
+    </section>
+    <section style="background-image: url('images/model-y.jpg');">
+        <div class="content">
+            <h1>Model 3</h1>
+            <p>Reserva en línea <a href="">Reserva Ya</a></p>
+            <div class="buttons">
+                <a href="">Personalizar orden</a>
+                <a href="">Inventarios</a>                
+            </div>
+        </div>
+    </section>
+    <section style="background-image: url('images/model-s.jpg');">
+        <div class="content">
+            <h1>Model 3</h1>
+            <p>Reserva en línea <a href="">Reserva Ya</a></p>
+            <div class="buttons">
+                <a href="">Personalizar orden</a>
+                <a href="">Inventarios</a>                
+            </div>
+        </div>
+    </section>
+    <section style="background-image: url('images/model-x.jpg');">
+        <div class="content">
+            <h1>Model 3</h1>
+            <p>Reserva en línea <a href="">Reserva Ya</a></p>
+            <div class="buttons">
+                <a href="">Personalizar orden</a>
+                <a href="">Inventarios</a>                
+            </div>
+        </div>
+    </section>
+    <section style="background-image: url('images/solarpanels.jpg');">
+        <div class="content">
+            <h1>Model 3</h1>
+            <p>Reserva en línea <a href="">Reserva Ya</a></p>
+            <div class="buttons">
+                <a href="">Personalizar orden</a>
+                <a href="">Inventarios</a>                
+            </div>
+        </div>
+    </section>
+    <section style="background-image: url('images/roof.jpg');">
+        <div class="content">
+            <h1>Model 3</h1>
+            <p>Reserva en línea <a href="">Reserva Ya</a></p>
+            <div class="buttons">
+                <a href="">Personalizar orden</a>
+                <a href="">Inventarios</a>            
+            </div>
+        </div>
+    </section>
+    <section style="background-image: url('images/accessories.jpg');">
+        <div class="content">
+            <h1>Model 3</h1>
+            <p>Reserva en línea <a href="">Reserva Ya</a></p>
+            <div class="buttons">
+                <a href="">Personalizar orden</a>
+                <a href="">Inventarios</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
