--- a/index.html
+++ b/index.html
@@ -31,9 +31,34 @@
         <nav class="right">
             <a href="" class="desktop">Shop</a>
             <a href="" class="desktop">Account</a>
-            <a href="">Menu</a>
+            <a href="" id="menuBtn">Menu</a>
         </nav>
     </header>
+    <div class="backdrop"></div>
+    <!-- Menu lateral -->
+    <aside>
+        <button class="close">&times;</button>
+        <a href="">Model S</a>
+        <a href="">Model 3</a>
+        <a href="">Model X</a>
+        <a href="">Model Y</a>
+        <a href="">Solar Roof</a>
+        <a href="">Solar Panels</a>
+        <a href="">Existing Inventory</a>
+        <a href="">Used Inventory</a>
+        <a href="">Trade-In</a>
+        <a href="">Demo Drive</a>
+        <a href="">Insurance</a>
+        <a href="">Powerwall</a>
+        <a href="">Commercial Energy</a>
+        <a href="">Utilities</a>
+        <a href="">Charging</a>
+        <a href="">Find Us</a>
+        <a href="">Support</a>
+        <a href="">Investor Relations</a>
+        <a href="">Shop</a>
+        <a href="">Account</a>
+    </aside>
     <!-- Secciones -->
     <section style="background-image: url('images/model-3.jpg');">
         <div class="content">
@@ -105,5 +130,8 @@
             </div>
         </div>
     </section>
+
+    <!-- Script para el menu de navegacion -->
+    <script src="nav.js"></script>
 </body>
 </html>
