--- a/index.html
+++ b/index.html
@@ -1,33 +1,29 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tesla Clone</title>
-    <!-- Link a estilos.css -->
-    <link rel="stylesheet" href="styles.css">
-    <!-- Link de goolgle fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/jpg" href="images/favicon.png"/>
 </head>
 <body>
     <header>
-        <!-- Logo Tesla -->
         <a href="" class="logo">
-            <svg class="tds-icon tds-icon-logo-wordmark tds-site-logo-icon" viewBox="0 0 342 35" xmlns="http://www.w3.org/2000/svg"><path d="M0 .1a9.7 9.7 0 0 0 7 7h11l.5.1v27.6h6.8V7.3L26 7h11a9.8 9.8 0 0 0 7-7H0zm238.6 0h-6.8v34.8H263a9.7 9.7 0 0 0 6-6.8h-30.3V0zm-52.3 6.8c3.6-1 6.6-3.8 7.4-6.9l-38.1.1v20.6h31.1v7.2h-24.4a13.6 13.6 0 0 0-8.7 7h39.9v-21h-31.2v-7h24zm116.2 28h6.7v-14h24.6v14h6.7v-21h-38zM85.3 7h26a9.6 9.6 0 0 0 7.1-7H78.3a9.6 9.6 0 0 0 7 7zm0 13.8h26a9.6 9.6 0 0 0 7.1-7H78.3a9.6 9.6 0 0 0 7 7zm0 14.1h26a9.6 9.6 0 0 0 7.1-7H78.3a9.6 9.6 0 0 0 7 7zM308.5 7h26a9.6 9.6 0 0 0 7-7h-40a9.6 9.6 0 0 0 7 7z" fill="currentColor"></path></svg>
+            <svg class="tds-icon tds-icon-logo-wordmark tds-site-logo-icon" viewBox="0 0 342 35" xmlns="http://www.w3.org/2000/svg"><path d="M0 .1a9.7 9.7 0 007 7h11l.5.1v27.6h6.8V7.3L26 7h11a9.8 9.8 0 007-7H0zm238.6 0h-6.8v34.8H263a9.7 9.7 0 006-6.8h-30.3V0zm-52.3 6.8c3.6-1 6.6-3.8 7.4-6.9l-38.1.1v20.6h31.1v7.2h-24.4a13.6 13.6 0 00-8.7 7h39.9v-21h-31.2v-7h24zm116.2 28h6.7v-14h24.6v14h6.7v-21h-38zM85.3 7h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 13.8h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 14.1h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zM308.5 7h26a9.6 9.6 0 007-7h-40a9.6 9.6 0 007 7z" fill="currentColor"></path></svg>
         </a>
-        <!-- Menu de navegacion -->
         <nav class="center desktop">
             <a href="">Model S</a>
             <a href="">Model 3</a>
             <a href="">Model X</a>
             <a href="">Model Y</a>
             <a href="">Solar Roof</a>
-            <a href="">Solar panels</a>
+            <a href="">Solar Panels</a>
         </nav>
-        <!-- Menu oculto-->
         <nav class="right">
             <a href="" class="desktop">Shop</a>
             <a href="" class="desktop">Account</a>
@@ -35,7 +31,6 @@
         </nav>
     </header>
     <div class="backdrop"></div>
-    <!-- Menu lateral -->
     <aside>
         <button class="close">&times;</button>
         <a href="">Model S</a>
@@ -47,8 +42,7 @@
         <a href="">Existing Inventory</a>
         <a href="">Used Inventory</a>
         <a href="">Trade-In</a>
-        <a href="">Demo Drive</a>
-        <a href="">Insurance</a>
+        <a href="">Test Drive</a>
         <a href="">Powerwall</a>
         <a href="">Commercial Energy</a>
         <a href="">Utilities</a>
@@ -59,79 +53,77 @@
         <a href="">Shop</a>
         <a href="">Account</a>
     </aside>
-    <!-- Secciones -->
-    <section style="background-image: url('images/model-3.jpg');">
+    <section style="background-image: url('images/model-3.jpg')" class="active">
         <div class="content">
             <h1>Model 3</h1>
-            <p>Reserva en línea <a href="">Reserva Ya</a></p>
+            <p>Order Online for <a href="">Touchless Delivery</a></p>
             <div class="buttons">
-                <a href="">Personalizar orden</a>
-                <a href="">Inventarios</a>
+                <a href="">custom order</a>
+                <a href="">exising inventory</a>
             </div>
         </div>
     </section>
-    <section style="background-image: url('images/model-y.jpg');">
+    <section style="background-image: url('images/model-y.jpg')">
         <div class="content">
-            <h1>Model 3</h1>
-            <p>Reserva en línea <a href="">Reserva Ya</a></p>
+            <h1>Model Y</h1>
+            <p>Order Online for <a href="">Touchless Delivery</a></p>
             <div class="buttons">
-                <a href="">Personalizar orden</a>
-                <a href="">Inventarios</a>                
+                <a href="">custom order</a>
+                <a href="">exising inventory</a>
             </div>
         </div>
     </section>
-    <section style="background-image: url('images/model-s.jpg');">
+    <section style="background-image: url('images/model-s.jpg')">
         <div class="content">
-            <h1>Model 3</h1>
-            <p>Reserva en línea <a href="">Reserva Ya</a></p>
+            <h1>Model S</h1>
+            <p>Order Online for <a href="">Touchless Delivery</a></p>
             <div class="buttons">
-                <a href="">Personalizar orden</a>
-                <a href="">Inventarios</a>                
+                <a href="">custom order</a>
+                <a href="">exising inventory</a>
             </div>
         </div>
     </section>
-    <section style="background-image: url('images/model-x.jpg');">
+    <section style="background-image: url('images/model-x.jpg')">
         <div class="content">
-            <h1>Model 3</h1>
-            <p>Reserva en línea <a href="">Reserva Ya</a></p>
+            <h1>Model X</h1>
+            <p>Order Online for <a href="">Touchless Delivery</a></p>
             <div class="buttons">
-                <a href="">Personalizar orden</a>
-                <a href="">Inventarios</a>                
+                <a href="">custom order</a>
+                <a href="">exising inventory</a>
             </div>
         </div>
     </section>
-    <section style="background-image: url('images/solarpanels.jpg');">
+    <section style="background-image: url('images/solarpanels.jpg')">
         <div class="content">
             <h1>Model 3</h1>
-            <p>Reserva en línea <a href="">Reserva Ya</a></p>
+            <p>Order Online for <a href="">Touchless Delivery</a></p>
             <div class="buttons">
-                <a href="">Personalizar orden</a>
-                <a href="">Inventarios</a>                
+                <a href="">custom order</a>
+                <a href="">exising inventory</a>
             </div>
         </div>
     </section>
-    <section style="background-image: url('images/roof.jpg');">
+    <section style="background-image: url('images/roof.jpg')">
         <div class="content">
             <h1>Model 3</h1>
-            <p>Reserva en línea <a href="">Reserva Ya</a></p>
+            <p>Order Online for <a href="">Touchless Delivery</a></p>
             <div class="buttons">
-                <a href="">Personalizar orden</a>
-                <a href="">Inventarios</a>            
+                <a href="">custom order</a>
+                <a href="">exising inventory</a>
             </div>
         </div>
     </section>
-    <section style="background-image: url('images/accessories.jpg');">
+    <section style="background-image: url('images/accessories.jpg')">
         <div class="content">
             <h1>Model 3</h1>
-            <p>Reserva en línea <a href="">Reserva Ya</a></p>
+            <p>Order Online for <a href="">Touchless Delivery</a></p>
             <div class="buttons">
-                <a href="">Personalizar orden</a>
-                <a href="">Inventarios</a>
+                <a href="">custom order</a>
+                <a href="">exising inventory</a>
             </div>
         </div>
     </section>
-
-    <!-- Script para el menu de navegacion -->
     <script src="nav.js"></script>
+    <script src="scroll.js"></script>
 </body>
 </html>
